# ESP-Vindriktning

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  build.rs  export-esp.sh  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: board.rs  clock.rs  fan.rs  http.rs  leds.rs  logging.rs  main.rs  pm1006.rs  scd41.rs  utils.rs  wifi.rs
