[package]
name = "esp-vindriktning"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z" # "s" is currently broken

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.32.0", features = ["binstart"] }
log = "0.4.17"
esp-idf-svc = "0.44.0"
esp-idf-hal = "0.40.0"
embedded-svc= "0.23.1"
embedded-hal = "0.2.7"
anyhow = { version = "1", features = ["backtrace"] }
scd4x = "0.2.1"
ws2812-esp32-rmt-driver = { version = "0.4.0", git = "https://github.com/vojty/ws2812-esp32-rmt-driver", branch = "upgrade-esp-idf-sys-0.32" }
smart-leds-trait = "0.2.1"
serde = "1.0.147"
serde_json = "1.0.88"
sntp_request = "2.0.0"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
dotenv-build = "0.1.1"
