[package]
name = "esp-vindriktning"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z" # "s" is currently broken

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# default = ["experimental"]
# experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
# default = ["std",  "esp-idf-svc/native"]
# std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
# alloc = ["esp-idf-svc/alloc"]
# experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
embedded-hal = "0.2.7"
embedded-io = "0.6.1"
embedded-svc= "0.26.2"
esp-idf-svc = "0.47.3"
log = "0.4.20"
scd4x = "0.2.1"
serde = "1.0.192"
serde_json = "1.0.108"
smart-leds-trait = "0.2.1"
sntp_request = "2.0.1"
pm1006 = "0.0.2"
time = "0.3.31"
time-tz = { version = "2.0.0", features = ["db"] }
ws2812-esp32-rmt-driver = "0.6.0"

[build-dependencies]
dotenv-build = "0.1.1"
embuild = "0.31.4"
