[package]
name = "esp-vindriktning"
version = "0.1.0"
authors = ["Tom치코 Vojt치코ek <vojtasek.tomas@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "z" # "s" is currently broken

[package.metadata.espflash]
partition_table = "partitions.csv" # Supports CSV and binary formats

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# default = ["experimental"]
# experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
# default = ["std",  "esp-idf-svc/native"]
# std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
# alloc = ["esp-idf-svc/alloc"]
# experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-svc = "0.28.0"
esp-idf-svc = "0.49.1"
log = "0.4.22"
scd4x = { version = "0.3.0", features = ["scd41"] }
serde = "1.0.210"
serde_json = "1.0.128"
smart-leds-trait = "0.3.0"
sntp_request = "2.0.1"
pm1006 = "0.0.2"
time = "0.3.36"
time-tz = { version = "2.0.0", features = ["db"] }
ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }

[build-dependencies]
dotenv-build = "0.1.1"
embuild = "0.32.0"
